--- a/src/resources/_top.html
+++ b/src/resources/_top.html
@@ -10,8 +10,8 @@
         <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
           <tr>
             <td align="center" valign="top" style="padding: 20px 24px;">
-              <a href="{{site.frontendUrl}}" target="_blank" style="display: inline-block;">
-                <img src="{{site.imagesUrl}}/longLogo.png" alt="Logo" border="0"  style="display: block; width: 300px;">
+              <a href="{{frontendUrl}}" target="_blank" style="display: inline-block;">
+                <img src="{{imagesUrl}}/longLogo.png" alt="Logo" border="0"  style="display: block; width: 300px;">
               </a>
             </td>
           </tr>
