--- a/src/resources/ResetPasswordMail.html
+++ b/src/resources/ResetPasswordMail.html
@@ -1,10 +1,11 @@
-{% import "_base.html" as site%}
+{% import "utilities.html" as utilities %}
+{% set realName = utilities.trim(utilities.getRealName(user)) %}
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>PERNB - Change your Password</title>
+    <title>{{appName}} - Change your Password</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet/less" type="text/css" href="styles.scss" />
 </head>
@@ -14,7 +15,7 @@
 
   <!-- start preheader -->
   <div class="preheader" style="display: none; max-width: 0; max-height: 0; overflow: hidden; font-size: 1px; line-height: 1px; color:#ffff; opacity: 0;">
-    PERNB - Change your Password
+    {{appName}} - Change your Password
     <!-- A preheader is the short summary text that follows the subject line when an email is viewed in the inbox. -->
   </div>
   <!-- end preheader -->
@@ -63,7 +64,7 @@
           <!-- start copy -->
           <tr>
             <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-              <p style="margin: 0;">Hey {{user.email}},<br> click on the button below to change your password
+              <p style="margin: 0;">Hey {{realName}},<br> click on the button below to change your password
               <br>
             </td>
           </tr>
@@ -78,7 +79,7 @@
                     <table border="0" cellpadding="0" cellspacing="0">
                       <tr>
                         <td align="center" bgcolor="#03A9F4" style="border-radius: 6px; ">
-                          <a href="{{site.frontendUrl}}auth/password-restore/{{user.activationCode}}" target="_blank" style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Change your Password</a>
+                          <a href="{{frontendUrl}}auth/password-restore/{{user.activationCode}}" target="_blank" style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Change your Password</a>
                         </td>
                       </tr>
                     </table>
