--- a/src/resources/ResetPasswordMail.html
+++ b/src/resources/ResetPasswordMail.html
@@ -79,7 +79,7 @@
                     <table border="0" cellpadding="0" cellspacing="0">
                       <tr>
                         <td align="center" bgcolor="#03A9F4" style="border-radius: 6px; ">
-                          <a href="{{frontendUrl}}auth/password-restore/{{user.activationCode}}" target="_blank" style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Change your Password</a>
+                          <a href="{{frontendUrl}}auth/reset-password/{{user.activationCode}}" target="_blank" style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Change your Password</a>
                         </td>
                       </tr>
                     </table>
