--- a/src/resources/utilities.html
+++ b/src/resources/utilities.html
@@ -1,17 +1,5 @@
-{% macro getRealName(user) %}
-{% if user != null %}
-    {% if (user.firstname and  user.lastname) %}
-        {{user.firstname}} {{user.lastname}}
-    {% elif user.firstname %}
-        {{user.firstname}}
-    {% elif user.lastname %}
-        {{user.firstname}}
-    {% elif user.email %}
-        {{user.email}}
-    {% endif %}
-{% endif %}
-{% endmacro %}
-
-{% macro trim(string) %}
-    {{ string | trim }}
-{% endmacro %}
+{% macro getRealName(user) %} {% if user != null %} {% if (user.firstname and
+user.lastname) %} {{user.firstname}} {{user.lastname}} {% elif user.firstname %}
+{{user.firstname}} {% elif user.lastname %} {{user.firstname}} {% elif
+user.email %} {{user.email}} {% endif %} {% endif %} {% endmacro %} {% macro
+trim(string) %} {{ string | trim }} {% endmacro %}
