--- a/src/resources/_bottom.html
+++ b/src/resources/_bottom.html
@@ -11,25 +11,25 @@
     </td>
 </tr>-->
 <tr>
-  <td
-    align="left"
-    bgcolor="#ffffff"
-    style="
-      padding-bottom: 24px;
-      padding-left: 24px;
-      padding-right: 24px;
-      font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
-      font-size: 16px;
-      line-height: 24px;
-      border-bottom: 3px solid #d4dadf;
-    "
-  >
-    <div style="display: flex; align-items: center; font-weight: bold">
-      <img
-        src="{{imagesUrl}}/adminAvatar.png"
-        alt="Avatar"
-        style="border-radius: 50%; max-width: 80px; margin-right: 30px"
-      />The Team of {{appName}}
-    </div>
-  </td>
+	<td
+		align="left"
+		bgcolor="#ffffff"
+		style="
+			padding-bottom: 24px;
+			padding-left: 24px;
+			padding-right: 24px;
+			font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+			font-size: 16px;
+			line-height: 24px;
+			border-bottom: 3px solid #d4dadf;
+		"
+	>
+		<div style="display: flex; align-items: center; font-weight: bold">
+			<img
+				src="{{imagesUrl}}/shortLogo.png"
+				alt="Avatar"
+				style="border-radius: 50%; max-width: 80px; margin-right: 30px"
+			/>The Team of {{appName}}
+		</div>
+	</td>
 </tr>
