added feedback email

--- a/src/resources/NewUserMail.html
+++ b/src/resources/NewUserMail.html
@@ -129,7 +129,7 @@ utilities.trim(utilities.getRealName(user)) %}
 														style="border-radius: 6px"
 													>
 														<a
-															href="{{mainDomain}}"
+															href="{{frontendUrl}}"
 															target="_blank"
 															style="
 																display: inline-block;
