--- a/src/resources/button.html
+++ b/src/resources/button.html
@@ -20,7 +20,7 @@
 										text-decoration: none;
 										border-radius: 6px;
 									"
-									>Confirm Your Email</a
+									>{{caption}}</a
 								>
 							</td>
 						</tr>
