--- a/src/resources/NewUserMailActivated.html
+++ b/src/resources/NewUserMailActivated.html
@@ -1,5 +1,6 @@
 {% import "utilities.html" as utilities %} {% set realName =
-utilities.trim(utilities.getRealName(user)) %}
+utilities.trim(utilities.getRealName(user)) %} {% import "button.html" as button
+%}
 <!DOCTYPE html>
 <html>
 	<head>
@@ -112,42 +113,7 @@ utilities.trim(utilities.getRealName(user)) %}
 								</p>
 							</td>
 						</tr>
-						<tr>
-							<td align="left" bgcolor="#ffffff">
-								<table border="0" cellpadding="0" cellspacing="0" width="100%">
-									<tr>
-										<td align="center" bgcolor="#ffffff" style="padding: 12px">
-											<table border="0" cellpadding="0" cellspacing="0">
-												<tr>
-													<td
-														align="center"
-														bgcolor="#03A9F4"
-														style="border-radius: 6px"
-													>
-														<a
-															href="{{frontendUrl}}"
-															target="_blank"
-															style="
-																display: inline-block;
-																padding: 16px 36px;
-																font-family: 'Source Sans Pro', Helvetica, Arial,
-																	sans-serif;
-																font-size: 16px;
-																color: #ffffff;
-																text-decoration: none;
-																border-radius: 6px;
-															"
-														>
-															Login
-														</a>
-													</td>
-												</tr>
-											</table>
-										</td>
-									</tr>
-								</table>
-							</td>
-						</tr>
+						{{button.make(frontendUrl, "Login", color)}}
 						<!-- end copy -->
 						<!-- start copy -->
 						{% include "_bottom.html"%}
