--- a/src/resources/NewUserMailActivation.html
+++ b/src/resources/NewUserMailActivation.html
@@ -1,221 +1,189 @@
 {% import "utilities.html" as utilities %} {% set realName =
-utilities.trim(utilities.getRealName(user)) %}
+utilities.trim(utilities.getRealName(user)) %} {% import "button.html" as button
+%}
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Confirm your Email</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet/less" type="text/css" href="styles.scss" />
-  </head>
-  <body>
-    <!-- start preheader -->
-    <div
-      class="preheader"
-      style="
-        display: none;
-        max-width: 0;
-        max-height: 0;
-        overflow: hidden;
-        font-size: 1px;
-        line-height: 1px;
-        color: #ffff;
-        opacity: 0;
-      "
-    >
-      Confirm the email to access in {{appName}}
-      <!-- A preheader is the short summary text that follows the subject line when an email is viewed in the inbox. -->
-    </div>
-    <!-- end preheader -->
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="x-ua-compatible" content="ie=edge" />
+		<title>Confirm your Email</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet/less" type="text/css" href="styles.scss" />
+	</head>
+	<body>
+		<!-- start preheader -->
+		<div
+			class="preheader"
+			style="
+				display: none;
+				max-width: 0;
+				max-height: 0;
+				overflow: hidden;
+				font-size: 1px;
+				line-height: 1px;
+				color: #ffff;
+				opacity: 0;
+			"
+		>
+			Confirm the email to access in {{appName}}
+			<!-- A preheader is the short summary text that follows the subject line when an email is viewed in the inbox. -->
+		</div>
+		<!-- end preheader -->
 
-    <!-- start body -->
-    <table
-      border="0"
-      cellpadding="0"
-      cellspacing="0"
-      width="100%"
-      height="100%"
-    >
-      {%include "_top.html" %}
+		<!-- start body -->
+		<table
+			border="0"
+			cellpadding="0"
+			cellspacing="0"
+			width="100%"
+			height="100%"
+		>
+			{%include "_top.html" %}
 
-      <!-- start hero -->
-      <tr>
-        <td align="center" bgcolor="#e9ecef">
-          <!--[if (gte mso 9)|(IE)]>
+			<!-- start hero -->
+			<tr>
+				<td align="center" bgcolor="#e9ecef">
+					<!--[if (gte mso 9)|(IE)]>
         <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
         <tr>
         <td align="center" valign="top" width="600">
         <![endif]-->
-          <table
-            border="0"
-            cellpadding="0"
-            cellspacing="0"
-            width="100%"
-            style="max-width: 600px"
-          >
-            <tr>
-              <td
-                align="left"
-                bgcolor="#ffffff"
-                style="
-                  padding: 36px 24px 0;
-                  font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
-                  border-top: 3px solid #d4dadf;
-                "
-              >
-                <h1
-                  style="
-                    margin: 0;
-                    font-size: 32px;
-                    font-weight: 700;
-                    letter-spacing: -1px;
-                    line-height: 48px;
-                  "
-                >
-                  Confirm your Email
-                </h1>
-              </td>
-            </tr>
-          </table>
-          <!--[if (gte mso 9)|(IE)]>
+					<table
+						border="0"
+						cellpadding="0"
+						cellspacing="0"
+						width="100%"
+						style="max-width: 600px"
+					>
+						<tr>
+							<td
+								align="left"
+								bgcolor="#ffffff"
+								style="
+									padding: 36px 24px 0;
+									font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+									border-top: 3px solid #d4dadf;
+								"
+							>
+								<h1
+									style="
+										margin: 0;
+										font-size: 32px;
+										font-weight: 700;
+										letter-spacing: -1px;
+										line-height: 48px;
+									"
+								>
+									Confirm your Email
+								</h1>
+							</td>
+						</tr>
+					</table>
+					<!--[if (gte mso 9)|(IE)]>
         </td>
         </tr>
         </table>
         <![endif]-->
-        </td>
-      </tr>
-      <!-- end hero -->
+				</td>
+			</tr>
+			<!-- end hero -->
 
-      <!-- start copy block -->
-      <tr>
-        <td align="center" bgcolor="#e9ecef">
-          <!--[if (gte mso 9)|(IE)]>
+			<!-- start copy block -->
+			<tr>
+				<td align="center" bgcolor="#e9ecef">
+					<!--[if (gte mso 9)|(IE)]>
         <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
         <tr>
         <td align="center" valign="top" width="600">
         <![endif]-->
-          <table
-            border="0"
-            cellpadding="0"
-            cellspacing="0"
-            width="100%"
-            style="max-width: 600px"
-          >
-            <!-- start copy -->
-            <tr>
-              <td
-                align="left"
-                bgcolor="#ffffff"
-                style="
-                  padding: 24px;
-                  font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
-                  font-size: 16px;
-                  line-height: 24px;
-                "
-              >
-                <p style="margin: 0">
-                  Welcome {{realName}}, <br />Your registration has been
-                  successful, click on the button below to confirm your email
-                  and visit {{appName}}
-                  <br />
-                </p>
-              </td>
-            </tr>
-            <!-- end copy -->
-            <!-- start button -->
-            <tr>
-              <td align="left" bgcolor="#ffffff">
-                <table border="0" cellpadding="0" cellspacing="0" width="100%">
-                  <tr>
-                    <td align="center" bgcolor="#ffffff" style="padding: 12px">
-                      <table border="0" cellpadding="0" cellspacing="0">
-                        <tr>
-                          <td
-                            align="center"
-                            bgcolor="#03A9F4"
-                            style="border-radius: 6px"
-                          >
-                            <a
-                              href="{{frontendUrl}}auth/activate/{{user.activationCode}}"
-                              target="_blank"
-                              style="
-                                display: inline-block;
-                                padding: 16px 36px;
-                                font-family: 'Source Sans Pro', Helvetica, Arial,
-                                  sans-serif;
-                                font-size: 16px;
-                                color: #ffffff;
-                                text-decoration: none;
-                                border-radius: 6px;
-                              "
-                              >Confirm Your Email</a
-                            >
-                          </td>
-                        </tr>
-                      </table>
-                    </td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
-            <!-- end button -->
-            <!-- start copy -->
-            <tr>
-              <td
-                align="left"
-                bgcolor="#ffffff"
-                style="
-                  padding: 24px;
-                  font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
-                  font-size: 16px;
-                  line-height: 24px;
-                "
-              >
-                <p style="margin: 0">
-                  If you have not made this request, you can simply delete this
-                  email :)
-                </p>
-              </td>
-            </tr>
-            <!-- end copy -->
-            <!-- start copy -->
-            {% include "_bottom.html"%}
-            <!-- end copy -->
-          </table>
-          <!--[if (gte mso 9)|(IE)]>
+					<table
+						border="0"
+						cellpadding="0"
+						cellspacing="0"
+						width="100%"
+						style="max-width: 600px"
+					>
+						<!-- start copy -->
+						<tr>
+							<td
+								align="left"
+								bgcolor="#ffffff"
+								style="
+									padding: 24px;
+									font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+									font-size: 16px;
+									line-height: 24px;
+								"
+							>
+								<p style="margin: 0">
+									Welcome {{realName}}, <br />Your registration has been
+									successful, click on the button below to confirm your email
+									and visit {{appName}}
+									<br />
+								</p>
+							</td>
+						</tr>
+						<!-- end copy -->
+						<!-- start button -->
+						{{button.make(frontendUrl + "auth/activate/"+user.activationCode,
+						"Confirm Your Email", color)}}
+						<!-- end button -->
+						<!-- start copy -->
+						<tr>
+							<td
+								align="left"
+								bgcolor="#ffffff"
+								style="
+									padding: 24px;
+									font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+									font-size: 16px;
+									line-height: 24px;
+								"
+							>
+								<p style="margin: 0">
+									If you have not made this request, you can simply delete this
+									email :)
+								</p>
+							</td>
+						</tr>
+						<!-- end copy -->
+						<!-- start copy -->
+						{% include "_bottom.html"%}
+						<!-- end copy -->
+					</table>
+					<!--[if (gte mso 9)|(IE)]>
         </td>
         </tr>
         </table>
         <![endif]-->
-        </td>
-      </tr>
-      <!-- end copy block -->
+				</td>
+			</tr>
+			<!-- end copy block -->
 
-      <!-- start footer -->
-      <tr>
-        <td align="center" bgcolor="#e9ecef" style="padding: 24px">
-          <!--[if (gte mso 9)|(IE)]>
+			<!-- start footer -->
+			<tr>
+				<td align="center" bgcolor="#e9ecef" style="padding: 24px">
+					<!--[if (gte mso 9)|(IE)]>
         <table align="center" border="0" cellpadding="0" cellspacing="0" width="600">
         <tr>
         <td align="center" valign="top" width="600">
         <![endif]-->
-          <table
-            border="0"
-            cellpadding="0"
-            cellspacing="0"
-            width="100%"
-            style="max-width: 600px"
-          ></table>
-          <!--[if (gte mso 9)|(IE)]>
+					<table
+						border="0"
+						cellpadding="0"
+						cellspacing="0"
+						width="100%"
+						style="max-width: 600px"
+					></table>
+					<!--[if (gte mso 9)|(IE)]>
         </td>
         </tr>
         </table>
         <![endif]-->
-        </td>
-      </tr>
-      <!-- end footer -->
-    </table>
-    <!-- end body -->
-  </body>
+				</td>
+			</tr>
+			<!-- end footer -->
+		</table>
+		<!-- end body -->
+	</body>
 </html>
