done social logins, updated packages

--- a/src/resources/NewUserMail.html
+++ b/src/resources/NewUserMail.html
@@ -109,7 +109,8 @@ utilities.trim(utilities.getRealName(user)) %} {% import "button.html" as button
 								"
 							>
 								<p style="margin: 0">
-									Welcome in {{appName}}, your account has been activated and
+									Welcome in {{appName}}, your account has been activated
+									<br />
 									your credentials are:<br />
 									<br />
 									<b>Username:</b> {{user.email}}<br />
