--- a/src/resources/resetPasswordMail.html
+++ b/src/resources/resetPasswordMail.html
@@ -119,7 +119,7 @@ utilities.trim(utilities.getRealName(user)) %} {% import "button.html" as button
 						<!-- end copy -->
 
 						<!-- start button -->
-						{{button.make(frontendUrl+"auth/reset-password/"+user.activationCode,"Change
+						{{button.make(frontendUrl+"/auth/reset-password/"+user.activationCode,"Change
 						your Password", color)}}
 						<!-- end button -->
 
