--- a/src/resources/_bottom.html
+++ b/src/resources/_bottom.html
@@ -29,7 +29,8 @@
 				src="{{imagesUrl}}/shortLogo.png"
 				alt="Avatar"
 				style="border-radius: 50%; max-width: 80px; margin-right: 30px"
-			/>The Team of {{appName}}
+			/>
+			<div>The Team of {{appName}}</div>
 		</div>
 	</td>
 </tr>
