--- a/src/resources/_bottom.html
+++ b/src/resources/_bottom.html
@@ -24,13 +24,24 @@
 			border-bottom: 3px solid #d4dadf;
 		"
 	>
+		<table width="100%" border="0" cellspacing="0" cellpadding="0">
+			<tr>
+				<td align="center">
+					<img
+						src="{{imagesUrl}}/shortLogo.png"
+						alt="Avatar"
+						style="border-radius: 50%; max-width: 80px; margin-right: 30px"
+					/>
+				</td>
+				<td align="center">The Team of {{appName}}</td>
+			</tr>
+		</table>
 		<div style="display: flex; align-items: center; font-weight: bold">
 			<img
 				src="{{imagesUrl}}/shortLogo.png"
 				alt="Avatar"
 				style="border-radius: 50%; max-width: 80px; margin-right: 30px"
 			/>
-			<div>The Team of {{appName}}</div>
 		</div>
 	</td>
 </tr>
