--- a/src/resources/_bottom.html
+++ b/src/resources/_bottom.html
@@ -24,15 +24,19 @@
 			border-bottom: 3px solid #d4dadf;
 		"
 	>
-		<tr>
-			<td align="center">
-				<img
-					src="{{imagesUrl}}/shortLogo.png"
-					alt="Avatar"
-					style="border-radius: 50%; max-width: 80px; margin-right: 30px"
-				/>
-			</td>
-			<td align="center" style="font-weight: bold">The Team of {{appName}}</td>
-		</tr>
+		<table width="100%" border="0" cellspacing="0" cellpadding="0">
+			<tr>
+				<td align="center">
+					<img
+						src="{{imagesUrl}}/shortLogo.png"
+						alt="Avatar"
+						style="border-radius: 50%; max-width: 80px; margin-right: 30px"
+					/>
+				</td>
+				<td align="center" style="font-weight: bold">
+					The Team of {{appName}}
+				</td>
+			</tr>
+		</table>
 	</td>
 </tr>
