--- a/src/resources/_bottom.html
+++ b/src/resources/_bottom.html
@@ -30,7 +30,7 @@
 					<img
 						src="{{imagesUrl}}/shortLogo.png"
 						alt="Avatar"
-						style="border-radius: 50%; max-width: 80px; margin-right: 30px"
+						style="border-radius: 50%; max-width: 80px"
 					/>
 				</td>
 				<td align="center" style="font-weight: bold">
