changed little style in bottom

--- a/src/resources/_bottom.html
+++ b/src/resources/_bottom.html
@@ -33,9 +33,7 @@
 						style="border-radius: 50%; max-width: 80px"
 					/>
 				</td>
-				<td align="center" style="font-weight: bold">
-					The Team of {{appName}}
-				</td>
+				<td align="left" style="font-weight: bold">The Team of {{appName}}</td>
 			</tr>
 		</table>
 	</td>
